--- a/index.html
+++ b/index.html
@@ -55,8 +55,64 @@
     <audio data-key="75" src="sounds/tom.wav"></audio>
     <audio data-key="76" src="sounds/tink.wav"></audio>
 
+    <!-- Credits -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      .credits {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 20px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.4rem;
+
+        background-color: black;
+        border-top: 2px solid #ff793f;
+        color: #f5f6fa;
+      }
+
+      .credits a {
+        color: #dcdde1;
+      }
+
+      .repository {
+        display: flex;
+        align-items: center;
+      }
+
+      .repository .fab {
+        margin-left: 15px;
+        font-size: 3rem;
+      }
+    </style>
+    <footer class="credits">
+      <p>
+        Darlan Caruso -
+        <a href="https://javascript30.com/">#JavaScript30DaysChallenge</a>
+      </p>
+      <p class="repository">
+        <a href="https://github.com/DarlanCaruso/javascript-drumkit"
+          >Check out the code on GitHub</a
+        >
+        <i class="fab fa-github"></i>
+      </p>
+    </footer>
+    <!-- Credits -->
+
     <script>
-      window.addEventListener("keydown", function(e) {
+      function playSound(e) {
         const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
         const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
 
@@ -65,7 +121,9 @@
         audio.play();
 
         key.classList.add("playing");
-      });
+      }
+
+      window.addEventListener("keydown", playSound);
 
       function removeTransition(e) {
         if (e.propertyName !== "transform") return;
